<resources>
    <string name="app_name">Cookit</string>
    <string name="titulo_home">Encontrá las mejores recetas</string>
    <string name="lblSearch">Buscar recetas</string>
    <string name="btnFavoritos">Favoritos</string>
    <string name="subtitulo_home">Tendencia</string>
    <string name="favourite">favourite</string>
    <string name="recipeTitle">Titulo</string>
    <string name="instruccions">Instrucciones</string>
    <string name="imgrecipe">imgRecipe</string>
    <string name="titulo_favourite">Recetas guardadas</string>
    <string name="background">background</string>
    <string name="login">Continuar con Google</string>
    <string name="btnLogout">Cerrar sesion</string>
    <string name="textview">TextView</string>
    <string name="sign_out">Sign Out</string>
    <string name="todo">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="ingredients">Ingredients</string>
    <string name="home">Home</string>
    <string name="back">back</string>
    <string name="tvTituloApp">Cookit</string>
    <string name="tvSubtituloApp">Encontrá las mejores recetas</string>
    <string name="llama_de_fuego">Llama de fuego</string>
    <string name="username">username</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="ingredientQuantity">ingredientQuantity</string>
    <string name="ingredientIcon">ingredientIcon</string>
    <string name="ingredientName">ingredientName</string>
    <string name="Quantity">quantity</string>
    <string name="unit">Unit</string>
    <string name="items"> Items</string>
    <string name="background_ingredient">background ingredient</string>
    <string name="buscar_recetas">Buscar recetas</string>


</resources>