<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblTituloFavourite"
        android:layout_width="283dp"
        android:layout_height="72dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="79dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/titulo_home"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/lblSubTituloHome"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/subtitulo_home"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toRightOf="@id/lblSubTituloHome"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:srcCompat="@drawable/fuego"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/llama_de_fuego" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:queryHint="Buscar recetas"
        android:background="@drawable/custom_searchview_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTituloFavourite" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecipes"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSubTituloHome" />

    <ImageButton
        android:id="@+id/btnFavourite"
        android:layout_width="48dp"
        android:layout_height="62dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        android:contentDescription="@string/favourite"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/rvRecipes"
        app:layout_constraintStart_toEndOf="@+id/lblTituloFavourite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102"
        app:srcCompat="@drawable/favourite"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/custom_searchview_background"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/btnLogout"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@+id/searchView"
        app:layout_constraintBottom_toTopOf="@+id/rvRecipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblSubTituloHome" />


</androidx.constraintlayout.widget.ConstraintLayout>