<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".RecipeDetail">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#FFF"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/back"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/back" />


    <TextView
        android:id="@+id/txtTituloReceta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/recipeTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgRecipe"
        android:layout_height="217dp"
        android:layout_width="wrap_content"
        android:minWidth="400dp"
        android:layout_margin="5dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/round_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloReceta"
        app:shapeAppearanceOverlay="@style/roundImage"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ingredientes"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/rvIngredients"
        app:layout_constraintTop_toBottomOf="@+id/imgRecipe" />

    <TextView
        android:id="@+id/tvItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/items"
        android:textSize="14sp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="@+id/rvIngredients"
        app:layout_constraintTop_toBottomOf="@+id/imgRecipe" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIngredients"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvIngredients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>